--- a/index.html
+++ b/index.html
@@ -346,17 +346,17 @@
       <div class="brand">
         <div class="container">
           <div class="row justify-content-center d-flex">
-            <div class="col-lg-3 col-md-4 col-6 justify-content-center d-flex">
-              <img src="img/brand1.png" alt="" width="98">
+           <div class="col-lg-3 col-md-6 justify-content-center d-flex">
+              <img src="img/logo-godrej.png">
             </div>
-            <div class="col-lg-3 col-md-4 col-6 justify-content-center d-flex">
-              <img src="img/brand2.png" alt="" width="98">
+            <div class="col-lg-3 col-md-6 justify-content-center d-flex">
+              <img src="img/logo-oppo.png">
             </div>
-            <div class="col-lg-3 col-md-4 col-6 justify-content-center d-flex">
-              <img src="img/brand3.png" alt="" width="98">
+            <div class="col-lg-3 col-md-6 justify-content-center d-flex">
+              <img src="img/logo-coca-cola.png">
             </div>
-            <div class="col-lg-3 col-md-4 col-6 justify-content-center d-flex">
-              <img src="img/brand4.png" alt="" width="98">
+            <div class="col-lg-3 col-md-6 justify-content-center d-flex">
+              <img src="img/logo-paypal.png">
             </div>
           </div>
         </div>
